# Bug Fixes
- **Move To...**: Fixed an issue where the "Choose Folder..." dialog wouldn't appear for some users.